Looking for response from user after assistant speaking

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             }
             else if (audioBufferQueue.length== 0){
                 console.log("No audio data in the queue.");
-                recognition.start();
+                startAudioProcessing();
                 return;
             }
 
