--- a/public/index.html
+++ b/public/index.html
@@ -250,7 +250,7 @@
       </div>
     </div>
 
-
+    <script src="https://cdn.jsdelivr.net/npm/showdown@2.1.0/dist/showdown.min.js"></script>
     <script src="./src/js/utils.js"></script>
     <script src="./src/js/main.js"></script>
     <script src="./src/js/ai.js"></script>
